--- a/day_09/blog-demo/src/main/resources/templates/admin/blog/index.html
+++ b/day_09/blog-demo/src/main/resources/templates/admin/blog/index.html
@@ -36,9 +36,9 @@
           <div class="container-fluid">
             <div class="row py-2">
               <div class="col-12">
-                <button type="button" class="btn btn-primary">
-                  <i class="fas fa-plus"></i> Viết bài
-                </button>
+                <a href="/admin/blogs/create" type="button" class="btn btn-primary">
+                    <i class="fas fa-plus"></i> Viết bài
+                </a>
                 <button type="button" class="btn btn-info">
                   <i class="fas fa-redo"></i> Refresh
                 </button>
