--- a/day_09/blog-demo/src/main/resources/templates/admin/fragments/fragment.html
+++ b/day_09/blog-demo/src/main/resources/templates/admin/fragments/fragment.html
@@ -96,13 +96,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a href="/admin/users" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Danh sách user</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">
+                                    <a href="/admin/users/create" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Tạo user</p>
                                     </a>
