--- a/day_12/demo-security-customer-user -db -thymleaf/src/main/resources/templates/register.html
+++ b/day_12/demo-security-customer-user -db -thymleaf/src/main/resources/templates/register.html
@@ -52,6 +52,7 @@
 
             if(res.status === 201){
                 console.log(res.data)
+                alert(res.data)
             }else {
                 alert("dang ki that bai")
             }
