--- a/day_12/demo-security-customer-user -db -thymleaf/src/main/resources/templates/forgot-password.html
+++ b/day_12/demo-security-customer-user -db -thymleaf/src/main/resources/templates/forgot-password.html
@@ -38,7 +38,7 @@
 
             if(res.status === 201){
                 console.log(res.data)
-                alert(res.data)
+                alert("kiem tra email cua ban")
             }else {
                 alert("dang ki that bai")
             }
